<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:inputType="text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newButton2"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:onClick="abrirTela2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newButton3"
            android:id="@+id/button2"
            android:layout_weight="0.5" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4" />

</LinearLayout>
